# dense-index-db

./: CMakeLists.txt  main.cpp
data/: data_seg.csv  index_seg.csv
file-classes/: DataSegment.cpp  DataSegment.h  DenseIndexFile.cpp  DenseIndexFile.h  IndexSegment.cpp  IndexSegment.h
helpers/: DatabaseInterface.cpp  DatabaseInterface.h  RandomDataGenerator.cpp  RandomDataGenerator.h
